--- a/components/distinguish.css
+++ b/components/distinguish.css
@@ -1,3 +1,15 @@
 .distinguish {
 	resize: none;
+	background: var(--input-paper);
+	color: var(--input-pen);
+	border-color: #a2a9b1;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 2px;
+}
+
+.distinguish:focus {
+	border-color: var(--border-color-progressive--focus, #36c);
+	box-shadow: inset 0 0 0 1px var(--box-shadow-color-progressive--focus, #36c);
+	outline: 1px solid transparent;
 }
