--- a/components/type.css
+++ b/components/type.css
@@ -1,13 +1,11 @@
 .type {
-  background-color: var(--input-paper);
-  color: var(--ink);
   padding: 0.357rem 0.5714rem;
   font-size: inherit;
   font-family: inherit;
   line-height: 1.4285;
   width: 100%;
-  color: #202122;
-  background-color: #fff;
+  background: var(--input-paper);
+  color: var(--input-pen);
   border-color: #a2a9b1;
   border-style: solid;
   border-width: 1px;
